tree-sitter-bet/test/corpus/10-builtin.txt
=====================
builtin with one argument
=====================
foo :: @bar("foo")
---

(source_file
  (const_declaration
    (identifier)
    (call
      (identifier_builtin)
      (string))))

=====================
builtin with many arguments
=====================
foo :: @bar("one", 2)
---

(source_file
  (const_declaration
    (identifier)
    (call
      (identifier_builtin)
      (string)
      (number))))
